--- a/SistemaMinutas/app/src/main/res/layout/activity_main.xml
+++ b/SistemaMinutas/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,18 @@
     android:gravity="center">
 
     <!-- Título -->
+
+    <!-- Subtítulo -->
     <TextView
         android:id="@+id/tv_welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:text="Bienvenido"
         android:textColor="#0000FF"
         android:textSize="32sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="24dp" />
+        android:textStyle="bold" />
 
-    <!-- Subtítulo -->
     <TextView
         android:id="@+id/tv_prompt"
         android:layout_width="wrap_content"
