--- a/SistemaMinutas/app/src/main/res/layout/home.xml
+++ b/SistemaMinutas/app/src/main/res/layout/home.xml
@@ -1,170 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="24dp"
+    android:gravity="center">
 
-    <!-- ImageView con restricciones -->
+    <!-- Título -->
 
-    <ImageView
-        android:id="@+id/logo"
-        android:layout_width="31dp"
-        android:layout_height="21dp"
-        android:layout_constraintStart_toStartOf="parent"
-        android:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/logo"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp" />
-
+    <!-- Subtítulo -->
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv_welcome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_constraintStart_toStartOf="parent"
-        android:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="24dp"
         android:text="Riondave"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="18dp" />
+        android:textColor="#0000FF"
+        android:textSize="32sp"
+        android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/tv_prompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_constraintStart_toStartOf="parent"
-        android:layout_constraintTop_toTopOf="parent"
         android:text="Proyectos"
-        android:textSize="28sp"
-        tools:layout_editor_absoluteX="37dp"
-        tools:layout_editor_absoluteY="103dp" />
+        android:textColor="#808080"
+        android:textSize="16sp"
+        android:layout_marginBottom="24dp" />
 
-    <TextView
-        android:id="@+id/proyecto"
-        android:layout_width="wrap_content"
+    <!-- Botón de nuevo proyecto -->
+    <Button
+        android:id="@+id/btn_login"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_constraintStart_toStartOf="parent"
-        android:layout_constraintTop_toTopOf="parent"
-        android:text="Proyectos"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="174dp"
-        tools:layout_editor_absoluteY="13dp" />
+        android:text="Nuevo proyecto"
+        android:backgroundTint="#0000FF"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:layout_marginBottom="24dp" />
 
-    <TextView
-        android:id="@+id/usuario"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_constraintStart_toStartOf="parent"
-        android:layout_constraintTop_toTopOf="parent"
-        android:text="Usuarios"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="265dp"
-        tools:layout_editor_absoluteY="13dp" />
-
-    <TextView
-        android:id="@+id/perfil"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_constraintStart_toStartOf="parent"
-        android:layout_constraintTop_toTopOf="parent"
-        android:text="Perfil"
-        android:textSize="18sp"
-        tools:layout_editor_absoluteX="343dp"
-        tools:layout_editor_absoluteY="13dp" />
-
-
-    <!-- aqui estan los proyectos 1 -->
+    <!-- proyectos -->
     <LinearLayout
-        android:id="@+id/containerProyecto"
-        android:layout_width="379dp"
-        android:layout_height="176dp"
-        android:layout_constraintBottom_toBottomOf="parent"
-        android:layout_constraintEnd_toEndOf="parent"
-        android:layout_constraintStart_toStartOf="parent"
-        android:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="16dp"
-        android:background="@android:color/black"
-        android:orientation="vertical"
-        android:padding="16dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="176dp">
+        android:layout_width="346dp"
+        android:layout_height="378dp"
+        android:layout_marginBottom="10dp"
+        android:background="#FFFFFF"
+        android:gravity="center"
+        android:orientation="vertical">
 
-
-        <!-- Nombre del proyecto -->
-        <TextView
-            android:id="@+id/textViewProyecto"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="241dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Nombre de proyecto"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            android:background="#000000"
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <!-- Descripcion -->
-        <TextView
-            android:id="@+id/textViewDescripcion"
-            android:layout_width="wrap_content"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Proyecto 1"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:text="Fecha de creación"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="241dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Descripción del proyecto"
-            android:textColor="@android:color/white"
-            android:textSize="18sp" />
+            android:background="#000000"
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <!-- Fecha de inicio -->
-        <TextView
-            android:id="@+id/textViewFecha"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Fecha de inicio"
-            android:textColor="@android:color/white"
-            android:textSize="16sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Proyecto 2"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:text="Fecha de creación"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp" />
 
-    <!-- aqui estan los proyecto2 -->
-    <LinearLayout
-        android:id="@+id/containerProyecto2"
-        android:layout_width="379dp"
-        android:layout_height="176dp"
-        android:layout_constraintBottom_toBottomOf="parent"
-        android:layout_constraintEnd_toEndOf="parent"
-        android:layout_constraintStart_toStartOf="parent"
-        android:layout_constraintTop_toTopOf="parent"
-        android:layout_margin="16dp"
-        android:background="@android:color/black"
-        android:orientation="vertical"
-        android:padding="16dp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="399dp">
+        </LinearLayout>
 
-
-        <!-- Nombre del proyecto -->
-        <TextView
-            android:id="@+id/textViewProyecto2"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="241dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Nombre de proyecto"
-            android:textColor="@android:color/white"
-            android:textSize="20sp" />
+            android:background="#000000"
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <!-- Descripcion -->
-        <TextView
-            android:id="@+id/textViewDescripcion2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:text="Descripción del proyecto"
-            android:textColor="@android:color/white"
-            android:textSize="18sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Proyecto 3"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
-        <!-- Fecha de inicio -->
-        <TextView
-            android:id="@+id/textViewFecha2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Fecha de inicio"
-            android:textColor="@android:color/white"
-            android:textSize="16sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:text="Fecha de creación"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cerrar sesión"
+            android:textColor="#0000FF"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+</LinearLayout>
